<resources>
    <string name="app_name">Enciclopedia</string>
    <string name="nome">Nome</string>
    <string name="contato">Contato</string>
    <string name="listaFormandos">Lista de formandos</string>
    <string name="ttm_armint">Armazenamento Interno</string>
    <string name="ttm_toast">Toast</string>
    <string name="ttm_basedados">Base de dados</string>
    <string name="ttm_contatoAgenda">Contato Agenda</string>
    <string name="ttm_contatoProvider">Contatos Provider</string>
    <string name="sair">Sair</string>
    <string name="bt_armazena">Armazenar</string>
    <string name="bt_recupera">Recuperar</string>
    <string name="bt_voltar">Voltar</string>
    <string name="bt_mostranome">Mostrar Nome</string>
    <string name="bt_vercontatos">Ver Contatos</string>
    <string name="bt_mudarcor">Mudar Cor</string>
    <string name="pref_color_dialogtitle">Escolha de cor!</string>
    <string name="pref_color_sumary">Clique para poder escolher!</string>
    <string name="pref_color_title">Seleção de cor</string>
    <string-array name="pref_color_entryvalues">
            <item> #FF6666</item>
            <item> #6666FF</item>
            <item> #66FF66</item>
            <item> #000000</item>
    </string-array>
    <string-array name="pref_color_entries">
        <item> Vermelho </item>
        <item> Azul </item>
        <item> Verde </item>
        <item> Preto </item>
    </string-array>

</resources>
