<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArmazenamentoInterno">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-104dp">

        <TextView
            android:id="@+id/texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <Button
            android:id="@+id/btn_armazenar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_armazena" />

        <Button
            android:id="@+id/btn_recuperar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_recupera" />

        <Button
            android:id="@+id/btn_voltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_voltar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>